# sqlalchemy-paradedb

./: .codespellignore  .codespellrc  .gitignore  .markdownlint.yaml  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  README.md  api.json  api.json5  apiignore.json  apiignore.json5  codecov.yml  pyproject.toml
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: assign-github-issue.yml  check-typo.yml  ci.yml  lint-bash.yml  lint-format.yml  lint-markdown.yml  lint-pr-title.yml  lint-yaml.yml  release.yml  schema-compat.yml
examples/: autocomplete.py  common.py  faceted_search.py  hybrid_rrf.py  more_like_this.py  quickstart.py  rag.py
examples/autocomplete/: autocomplete.py  setup.py
examples/faceted_search/: faceted_search.py  setup.py
examples/hybrid_rrf/: hybrid_rrf.py  setup.py
examples/more_like_this/: more_like_this.py  setup.py
examples/quickstart/: quickstart.py  setup.py
examples/rag/: rag.py  setup.py
paradedb/: __init__.py
paradedb/sqlalchemy/: __init__.py  _functions.py  _pdb_cast.py  _select_introspection.py  alembic.py  diagnostics.py  errors.py  expr.py  facets.py  indexing.py  inspect.py  pdb.py  search.py  select_with.py  tokenizer.py  validation.py
scripts/: check_api_coverage.py  check_schema_compat.py  run_examples.sh  run_integration_tests.sh  run_paradedb.sh  run_unit_tests.sh  smoke_wheel_install.sh
tests/integration/: conftest.py  test_advanced_search_integration.py  test_alembic_commands_integration.py  test_alembic_integration.py  test_core_query_compat_integration.py  test_diagnostics_integration.py  test_facets_integration.py  test_indexing_integration.py  test_paradedb_queries_integration.py  test_phase0_modules_integration.py  test_query_interface_integration.py  test_range_query_integration.py  test_snippet_functions_integration.py
tests/integration/alembic/: env.py
tests/unit/: test_alembic_unit.py  test_facets_unit.py  test_indexing_unit.py  test_phase0_modules_unit.py  test_sql_compilation_unit.py  test_validation_cache_unit.py
