[build-system]
requires = ["hatchling>=1.24.2"]
build-backend = "hatchling.build"

[project]
name = "sqlalchemy-paradedb"
version = "0.2.0"
description = "Typed SQLAlchemy helpers for ParadeDB"
readme = "README.md"
requires-python = ">=3.10"
authors = [
  { name = "ParadeDB" },
]
keywords = [
  "paradedb",
  "sqlalchemy",
  "postgres",
  "postgresql",
  "search",
  "bm25",
  "text search",
  "full text search",
  "hybrid search",
  "faceted search",
  "facets",
]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
  "Topic :: Database",
]
dependencies = [
  "sqlalchemy>=2.0.32",
]

[project.urls]
Homepage = "https://github.com/paradedb/sqlalchemy-paradedb"
Repository = "https://github.com/paradedb/sqlalchemy-paradedb"
Issues = "https://github.com/paradedb/sqlalchemy-paradedb/issues"
Changelog = "https://github.com/paradedb/sqlalchemy-paradedb/blob/main/CHANGELOG.md"

[project.optional-dependencies]
test = [
  "pytest>=8.0.0",
  "pytest-cov>=6.0",
  "psycopg[binary]>=3.1.18",
  "alembic>=1.13.0",
]
dev = [
  "ruff>=0.15.0",
  "mypy>=1.19.0",
  "pre-commit>=4.0.0",
]

[tool.pytest.ini_options]
addopts = "-ra"
testpaths = ["tests"]
markers = [
  "integration: marks tests that require a running ParadeDB instance",
]

[tool.ruff]
line-length = 120
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "B"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.10"
warn_unused_configs = true
packages = ["paradedb"]
check_untyped_defs = true
disallow_untyped_calls = true
warn_unused_ignores = true
warn_redundant_casts = true
strict_equality = true
disable_error_code = ["no-untyped-def", "no-any-return", "type-arg", "attr-defined"]

[[tool.mypy.overrides]]
module = ["alembic.*"]
ignore_missing_imports = true

[tool.coverage.run]
source = ["paradedb"]
branch = true

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "raise NotImplementedError",
]

[tool.hatch.build.targets.wheel]
packages = ["paradedb"]

[tool.hatch.build.targets.sdist]
include = [
  "paradedb",
  "tests",
  "scripts",
  "pyproject.toml",
]
